--- a/bootcamp/fastfeet/package.json
+++ b/bootcamp/fastfeet/package.json
@@ -8,10 +8,14 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
