--- a/bootcamp/desafiofinal/fastfeet/backend/package.json
+++ b/bootcamp/desafiofinal/fastfeet/backend/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.13.0"
   }
 }
